# BillGeneratorV04---NewTemplates

./: .gitignore  .replit  README.md  app.py  index.html  package-lock.json  pyproject.toml  replit.md  requirements.txt  run_todo_app.bat
LaTeX_Templates/: latex_code_for_comparative_statement.TeX  latex_code_for_letter_of_aceptance.TeX  latex_code_for_scrutiny_sheet.TeX  latex_code_for_work_order.TeX
attached_assets/: BillFixer_1755376385254.rar  app_1755376556826.py  certificate_ii_1755376581012.html  certificate_iii_1755376581012.html  deviation_statement_1755376581012.html  extra_items_1755376581012.html  note_sheet_1755376581013.html  streamlit_app_1755376611385.py
output/html_output/: certificate_ii.docx  certificate_iii.docx  deviation_statement.docx  extra_items.docx  first_page.docx  note_sheet.docx
output/latex_pdfs/: extra_items.tex
src/: App.css  App.jsx
src/components/: AddTodo.jsx  TodoItem.jsx  TodoList.jsx
templates/: bill_template.html  certificate_ii.html  certificate_ii.tex  certificate_iii.html  certificate_iii.tex  deviation_statement.html  deviation_statement.tex  extra_items.html  extra_items.tex  first_page.html  first_page.tex  note_sheet.html  note_sheet.tex
templates_latex/: README.md
