[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "jinja2>=3.1.6",
    "num2words>=0.5.14",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pdfkit>=1.0.0",
    "pypdf>=6.0.0",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
    "streamlit>=1.48.1",
    "xhtml2pdf>=0.2.17",
    "xlrd>=2.0.2",
]
